Attempt to fix sidebar wrapping issues.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,8 @@
 ---
 
 @import "{{ site.theme }}";
+
+/* Wrapper */
+.wrapper {
+  width:1060px;
+}
